--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
   </head>
   <body>
-    <script src="/js/data.js"></script>
+    <script src="./js/data.js"></script>
     <header class="container-fluid bg-dark position-sticky top-0">
       <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
         <li class="nav-item" role="presentation">
@@ -369,8 +369,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/data.js"></script>
-    <script src="/js/turno.js"></script>
+    <script src="./js/turno.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
